# Qt-Travis

./: .gitmodules  .travis.yml  README.md
TestDemo/src/: myclass.cpp  myclass.hpp  src.pro
TestDemo/tests/: tests.pro  tst_myclasstester.cpp  tst_myclasstester.hpp
TestLib/: .gitignore  CMakeLists.txt
TestLib/include/: TestLib_global.hpp  testlib.hpp
TestLib/src/: testlib.cpp
TestLib/test/libtestlib/: testlib.cpp
TestLib2/: CMakeLists.txt
TestLib2/include/: TestLib2_global.hpp  testlib2.hpp
TestLib2/src/: testlib2.cpp
TestLib3/: .gitmodules  CMakeLists.txt
TestLib3/include/: TestLib3_global.hpp  testlib3.hpp
TestLib3/src/: testlib3.cpp
test/: .travis.yml  test.cpp  test.hpp  test.pro
